# sidewinder-linux-support

./: 99-sidewinder-wheel.rules  Cargo.toml  README.md
src/: main.rs  parser.rs  uinput.rs
