[package]
name = "sidewinder-wheel"
version = "0.1.0"
edition = "2021"
description = "Userspace Linux driver for Microsoft SideWinder Force Feedback Wheel"

[[bin]]
name = "sidewinder-wheel"
path = "src/main.rs"

[dependencies]
hidapi = "2.6"
clap = { version = "=4.4.18", features = ["derive"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "=0.10.2"
libc = "0.2"

[profile.release]
opt-level = 3
